...
            android:id="@+id/viewStatusIndicator"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/status_indicator_stopped" />

        <TextView
            android:id="@+id/tvServerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/server_status_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
...
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/actvIps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_address"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

...
</LinearLayout>

</com.google.android.material.card.MaterialCardView>


<androidx.recyclerview.widget.RecyclerView
android:id="@+id/rvFiles"
android:layout_width="0dp"
android:layout_height="0dp"
android:layout_marginTop="8dp"
app:layout_constraintTop_toBottomOf="@id/cardServerControls"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent"
...
