...
    <string name="pref_key_server_password" translatable="false">server_password</string>
    <string name="pref_key_server_port" translatable="false">server_port</string>
    <string name="pref_key_signaling_url" translatable="false">signaling_server_url</string>
    <string name="password_set">Password set. Devices must log in with it to connect.</string>
    <string name="password_required">Web login requires a password - it can\'t be left empty.</string>
    <string name="folder_not_accessible_select_again">The previously selected folder is no longer accessible. Please select it again.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--    SETUP-->
    <string name="setup_title">Welcome to Transfer</string>
    <string name="setup_description">To get started, please select a folder on your device that will be used for sharing files.</string>
    <string name="choose_shared_folder">Choose Shared Folder</string>
...
    <string name="upload_file">Upload File</string>
    <!--    main UI-->
    <string name="server_status_placeholder">Server Status</string>
    <string name="copy_ip_description">Copy IP Address</string>
    <string name="file_list_description">List of shared files</string>

    <string name="server_running">Server Running</string>

    <string name="server_error_format">Error: %s</string>
    <string name="permission_request_title">Permission Request</string>
    <string name="permission_request_message">Allow access from %s?</string>
    <string name="share_file_error">Could not share file: %s</string>
    <string name="no_readable_files_share">No readable files selected to share.</string>
...
