<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share_contextual"
        android:icon="@drawable/ic_share"
        android:title="@string/share_files"
        app:iconTint="@color/white" 
    app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_delete_contextual"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_files"
        app:iconTint="@color/white" 
    app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/action_select_all"
        app:iconTint="@color/white" 
    app:showAsAction="ifRoom"/>
</menu>