...
        android:text="@string/setup_description"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvSetupTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseFolder"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnChooseFolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
